--- a/python_book/code_files/test_write.ipynb
+++ b/python_book/code_files/test_write.ipynb
@@ -2,107 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Automobile Data:\n",
-      "Year of manufacture : 1990\n",
-      "Automobile make     : Ford\n",
-      "Automobile model    : F-250 \n",
+      "I have a jar of Fantastic brand pickles. \n",
+      "In the jar, there are 7 pickles with an average\n",
+      "weight of 2.34758475 ounces.\n",
       "\n",
-      "Automobile Data:\n",
-      "Year of manufacture : 2017\n",
-      "Automobile make     : Hyundai\n",
-      "Automobile model    : Elantra \n",
+      "I have a jar of Fantastic brand pickles. \n",
+      "In the jar, there are 7 pickles with an average\n",
+      "weight of 2.348 ounces.\n",
       "\n",
-      "Automobile Data:\n",
-      "Year of manufacture : 2012\n",
-      "Automobile make     : Toyota\n",
-      "Automobile model    : Camry \n",
+      "Printing the numbers without any formatting.\n",
+      "7583\n",
+      "-123\n",
+      "23.0\n",
+      "4838495.23221\n",
+      "483.234\n",
+      "1293.0\n",
       "\n",
-      "This car is a Chevrolet Corvette, Sting Ray Edition made in 1975.\n",
-      "It has a 350 cubic-inch V8 engine. It is awesome!!! \n",
-      "\n"
+      "Notice how this can be hard to read.\n",
+      "Let's try printing them and lining up the decimals.\n",
+      "   7583\n",
+      "   -123\n",
+      "     23.000\n",
+      "4838495.232\n",
+      "    483.234\n",
+      "   1293.000\n"
      ]
     }
    ],
    "source": [
-    "class Automobile():\n",
-    "    '''\n",
-    "    This is the \"parent\" class and generally should\n",
-    "    not be instantiated.\n",
-    "    '''\n",
-    "    number_of_doors = 2\n",
-    "    \n",
-    "    def __init__(self, year, make, model):\n",
-    "        self.year = year\n",
-    "        self.make = make\n",
-    "        self.model = model\n",
-    "        \n",
-    "    def __repr__(self):\n",
-    "        return f\"\"\"Automobile Data:\n",
-    "Year of manufacture : {self.year}\n",
-    "Automobile make     : {self.make}\n",
-    "Automobile model    : {self.model}\"\"\"\n",
+    "# adv_format.py\n",
     "\n",
+    "# let's make some variables\n",
+    "pickle_brand = \"Fantastic\"\n",
+    "number_of_pickles = 7\n",
+    "average_pickle_weight = 2.34758475 # oz\n",
     "\n",
-    "class Truck(Automobile):\n",
-    "    '''\n",
-    "    A Truck class is a type of Automobile.\n",
-    "    '''    \n",
-    "    def __init__(self, year, make, model, bed_type, bed_size, axel_weight):\n",
-    "        super().__init__(year, make, model)\n",
-    "        self.bed_type = bed_type\n",
-    "        self.bed_size = bed_size\n",
-    "        self.axel_weight = axel_weight\n",
+    "# now lets print those variables in a string\n",
+    "pickle_info = \"\"\"I have a jar of {} brand pickles. \n",
+    "In the jar, there are {} pickles with an average\n",
+    "weight of {} ounces.\\n\"\"\".format(\n",
+    "    pickle_brand, \n",
+    "    number_of_pickles, \n",
+    "    average_pickle_weight\n",
+    ") \n",
     "\n",
-    "        \n",
-    "class Sedan(Automobile):\n",
-    "    '''\n",
-    "    A Sedan is not a Truck but is also a type of Automobile.\n",
-    "    '''\n",
-    "    number_of_doors = 4\n",
-    "    \n",
-    "    def __init__(self, year, make, model, engine_type, engine_size):\n",
-    "        super().__init__(year, make, model)\n",
-    "        self.engine_type = engine_type\n",
-    "        self.engine_size = engine_size\n",
-    "        \n",
+    "print(pickle_info)\n",
     "\n",
-    "class Coupe(Automobile):\n",
-    "    '''\n",
-    "    A Coupe is not a Sedan or a Truck but is also a type of Automobile.\n",
-    "    '''    \n",
-    "    def __init__(self, year, make, model, engine_type, engine_size):\n",
-    "        super().__init__(year, make, model)\n",
-    "        self.engine_type = engine_type\n",
-    "        self.engine_size = engine_size\n",
-    "        \n",
+    "# lets redefine pickle_info in a better way\n",
+    "pickle_info = f\"\"\"I have a jar of {pickle_brand} brand pickles. \n",
+    "In the jar, there are {number_of_pickles} pickles with an average\n",
+    "weight of {average_pickle_weight:.3f} ounces.\\n\"\"\"\n",
     "\n",
-    "class Corvette(Coupe):\n",
-    "    '''\n",
-    "    A Corvette is a specific type of Coupe\n",
-    "    '''\n",
-    "    def __init__(self, year, edition, engine_size):\n",
-    "        super().__init__(year, \"Chevrolet\", \"Corvette\", \"V8\", engine_size)\n",
-    "        self.edition = edition\n",
+    "print(pickle_info)\n",
     "\n",
-    "    def __repr__(self):\n",
-    "        return f\"\"\"This car is a {self.make} {self.model}, {self.edition} Edition made in {self.year}.\n",
-    "It has a {self.engine_size} cubic-inch {self.engine_type} engine. It is awesome!!!\"\"\"\n",
-    "    \n",
+    "# lets take a bunch of numbers below\n",
+    "random_number_1 =    7583        # integer\n",
+    "random_number_2 =    -123        # negative integer\n",
+    "random_number_3 =      23.0      # float number\n",
+    "random_number_4 = 4838495.23221  # bigger float number\n",
+    "random_number_5 =     483.234    # medium float number\n",
+    "random_number_6 =    1293.0      # round float number\n",
     "\n",
-    "t = Truck(1990, \"Ford\", \"F-250\", \"Flat\", \"Long (8')\", '3/4 Ton')\n",
-    "s = Sedan(2017, \"Hyundai\", \"Elantra\", 'Straight 4', 92)\n",
-    "p = Coupe(2012, \"Toyota\", \"Camry\", \"V6\", 205)\n",
-    "c = Corvette(1975, \"Sting Ray\", 350)\n",
+    "# now let's print them\n",
+    "print(\"Printing the numbers without any formatting.\")\n",
+    "print(f\"{random_number_1}\")\n",
+    "print(f\"{random_number_2}\")\n",
+    "print(f\"{random_number_3}\")\n",
+    "print(f\"{random_number_4}\")\n",
+    "print(f\"{random_number_5}\")\n",
+    "print(f\"{random_number_6}\")\n",
+    "print(\"\")\n",
     "\n",
-    "for car in [t,s,p,c]:\n",
-    "    print(car, '\\n')"
+    "print(\"Notice how this can be hard to read.\")\n",
+    "print(\"Let's try printing them and lining up the decimals.\")\n",
+    "print(f\"{random_number_1:7d}\")    \n",
+    "print(f\"{random_number_2:7d}\")    \n",
+    "print(f\"{random_number_3:11.3f}\") \n",
+    "print(f\"{random_number_4:11.3f}\")\n",
+    "print(f\"{random_number_5:11.3f}\")\n",
+    "print(f\"{random_number_6:11.3f}\")\n"
    ]
   },
   {
@@ -129,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
