Need to debug the new resume

--- a/media/Mark_Redd_Resume_Printable.tex
+++ b/media/Mark_Redd_Resume_Printable.tex
@@ -1,4 +1,4 @@
-% \href{/media/Mark_Redd_Resume_Printable.pdf}{\textbf{Printable Resume}}
+% \href{/media/Mark_Redd_Resume_Printable.pdf}{\textbf{Printable CV}}
 
 \hypertarget{mark-edward-redd}{%
 \section{Mark Edward Redd}\label{mark-edward-redd}}
@@ -9,18 +9,19 @@
 % \href{https://www.linkedin.com/in/mark-redd-53878880/}{LinkedIn},
 % \href{https://github.com/flythereddflagg}{Github}
 
-\hypertarget{accepted-publications}{%
-\subsection{Accepted Publications}\label{accepted-publications}}
+\hypertarget{publications}{%
+\subsection{Publications}\label{publications}}
 
 % https://orcid.org/0000-0001-7269-2155
 
 \begin{itemize}
 \tightlist
 \item
-  Bloxham, J. C., Redd, M. E., Giles, N. F., Knotts, T. A., \& Wilding,
-  W. (n.d.). Proper Use of the DIPPR 801 Database for Creation of
-  Models, Methods, and Processes. \emph{Journal of Chemical \&
-  Engineering Data}.
+  Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and
+  W. Vincent Wilding, \emph{Proper Use of the DIPPR 801 Database for
+  Creation of Models, Methods, and Processes}, Journal of Chemical \&
+  Engineering Data \textbf{2021} \emph{66} (1), 3-10. DOI:
+  10.1021/acs.jced.0c00641
 \end{itemize}
 
 \hypertarget{experience}{%
@@ -35,19 +36,20 @@ Present}
 \begin{itemize}
 \tightlist
 \item
-  Research in autoignition temperatures (AIT) of pure compounds focusing
-  on chemical family trends
+  Research focus in autoignition temperatures (AIT) of pure compounds
+  focusing on chemical family trends
 \item
-  Mentored 10+ undergraduates focusing on safety and relevant laboratory
+  Mentored 20+ undergraduates focusing on safety and relevant laboratory
   skills
 \item
   Designed and constructed experimental apparatus and data acquisition
   hardware and software
 \item
-  Worked as a Teaching Assistant for undergraduate courses on ``Chemical
+  Worked as a teaching assistant for undergraduate courses on ``Chemical
   Plant Design'' and ``Numerical Methods''
 \item
-  Wrote custom software for data acquisition and analysis automation
+  Automated data acquisition and analysis by writing custom software
+  using Python, C/C++, and Arduino
 \end{itemize}
 
 \hypertarget{engineering-intern}{%
@@ -66,7 +68,8 @@ Present}
 \item
   Assembled and wired multiple components on coal fire reactor
 \item
-  Designed and began fabrication of a specialized CO2 separation process
+  Designed and began fabrication of a specialized \(CO_2\) separation
+  process
 \item
   Designed parts and assemblies with Autodesk Inventor CAD software
 \end{itemize}
@@ -91,7 +94,7 @@ May 2014}
   models
 \item
   Improved efficiency of data collection by automating data analysis and
-  graphic generation with VBA on Excel
+  graphic generation with Microsoft VBA
 \item
   Built, repaired and maintained various components of experimental
   reactor apparatus
@@ -155,26 +158,25 @@ University}\label{brigham-young-university-1}}
 \emph{Bachelor of Science, Chemical Engineering \textbar{} Sep 2008 --
 Apr 2016}
 
-\hypertarget{skills}{%
-\subsection{Skills}\label{skills}}
+\hypertarget{skills-accomplishments}{%
+\subsection{Skills \& Accomplishments}\label{skills-accomplishments}}
 
-\hypertarget{programming-languages}{%
-\subsubsection{Programming Languages}\label{programming-languages}}
+\hypertarget{programming}{%
+\subsubsection{Programming}\label{programming}}
 
 \begin{itemize}
 \tightlist
 \item
-  C / C++
+  Experience with C / C++, C\#, FORTRAN, Java, JavaScript / HTML / CSS,
+  MATLAB, Python, Microsoft VBA
 \item
-  FORTRAN
+  Implemented and published the open-source
+%   \href{https://github.com/flythereddflagg/lpfgopt}{Leapfrogging
+  Algorithm} with library wrappers for C, C++ and Python
 \item
-  JavaScript / HTML / CSS
-\item
-  MATLAB
-\item
-  Python
-\item
-  Microsoft VBA
+  Wrote an open-source introductory
+%   \href{https://flythereddflagg.github.io/python_book/site/index.html}{book}
+  on Python and computer science
 \end{itemize}
 
 \hypertarget{software-platforms}{%
@@ -183,21 +185,11 @@ Apr 2016}
 \begin{itemize}
 \tightlist
 \item
-  Arduino
+  Experience with Arduino, Autodesk Inventor, GCC and GNU Build Tools,
+  Git, Linux, MathCAD, MATLAB / Simulink, Microsoft Office
 \item
-  Autodesk Inventor
-\item
-  GCC and GNU Build Tools
-\item
-  Git
-\item
-  Linux
-\item
-  MathCAD
-\item
-  MATLAB / Simulink
-\item
-  Microsoft Office
+  Built custom data acquisition and analysis hardware and corresponding
+  software using Arduino and other open-source platforms
 \end{itemize}
 
 \hypertarget{industrial}{%
@@ -206,11 +198,11 @@ Apr 2016}
 \begin{itemize}
 \tightlist
 \item
-  Automotive Repair and Mantainence
+  Automotive repair and maintenance
 \item
-  Electronics Soldering and Wiring
+  Electronics soldering and wiring
 \item
   Machining processes (i.e.~end milling, turning etc.)
 \item
-  Welding (SMAW, GMAW, Oxy-acetylene)
+  Welding (SMAW, GMAW, Oxy-acetylene welding and brazing, GTAW)
 \end{itemize}
