--- a/media/main.tex
+++ b/media/main.tex
@@ -4,9 +4,8 @@
 %
 \documentclass[
 ]{article}
-\usepackage[a4paper, margin=0.75in]{geometry}
+\usepackage{amsmath,amssymb}
 \usepackage{lmodern}
-\usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
@@ -52,8 +51,5 @@
 \date{}
 
 \begin{document}
-
-\input{./Mark_Redd_Resume_Printable}
-
-
+\input{Mark_Redd_Resume_Printable}
 \end{document}
