--- a/media/Mark_Redd_Resume_Printable.tex
+++ b/media/Mark_Redd_Resume_Printable.tex
@@ -171,11 +171,11 @@ Apr 2016}
   MATLAB, Python, Microsoft VBA
 \item
   Implemented and published the open-source
-%   \href{https://github.com/flythereddflagg/lpfgopt}{Leapfrogging
+  \href{https://github.com/flythereddflagg/lpfgopt}{Leapfrogging
   Algorithm} with library wrappers for C, C++ and Python
 \item
   Wrote an open-source introductory
-%   \href{https://flythereddflagg.github.io/python_book/site/index.html}{book}
+  \href{https://flythereddflagg.github.io/python_book/site/index.html}{book}
   on Python and computer science
 \end{itemize}
 
