--- a/media/main.tex
+++ b/media/main.tex
@@ -47,6 +47,7 @@
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
 \renewcommand{\href}[2]{#2}
+\usepackage{nopageno}
 
 \author{}
 \date{}
