--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -9,47 +9,44 @@
 % \href{https://www.linkedin.com/in/mark-redd-53878880/}{LinkedIn},
 % \href{https://github.com/flythereddflagg}{Github}
 
-\hypertarget{publications}{%
-\subsection{Publications}\label{publications}}
-
-% https://orcid.org/0000-0001-7269-2155
-
-\begin{itemize}
-\tightlist
-\item
-  Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and
-  W. Vincent Wilding, \emph{Proper Use of the DIPPR 801 Database for
-  Creation of Models, Methods, and Processes}, Journal of Chemical \&
-  Engineering Data \textbf{2021} \emph{66} (1), 3-10. DOI:
-  10.1021/acs.jced.0c00641
-\end{itemize}
-
 \hypertarget{experience}{%
 \subsection{Experience}\label{experience}}
 
 \hypertarget{phd-researcher}{%
 \subsubsection{PhD Researcher}\label{phd-researcher}}
 
-\emph{Brigham Young University, Provo, UT, USA \textbar{} Jul 2016 --
-Present}
+\emph{Brigham Young University, Provo, UT, USA \textbar{} Advisor:
+Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
 
 \begin{itemize}
 \tightlist
 \item
-  Research focus in autoignition temperatures (AIT) of pure compounds
-  focusing on chemical family trends
+  Research in autoignition temperatures (AIT) of pure compounds for
+  AIChE's DIPPR 801 Database
+\item
+  Improved the reliability of AIT values in the 801 Database through
+  evaluation of data from 600+ sources
+\item
+  Designed and constructed an experimental apparatus at
+  \textasciitilde{} 10\% of the expected capital cost
+\item
+  Increased reliability and throughput of AIT measurements by automating
+  aspects of the experimental process
+\item
+  Wrote custom software to automate data acquisition and analysis using
+  Python and C/C++
+\item
+  Brokered the release of a previously closed-source AIT prediction
+  method for publication
+\item
+  Improved the method by relaxing assumptions, improving regression data
+  quality, and expanding applicability
 \item
   Mentored 20+ undergraduates focusing on safety and relevant laboratory
   skills
 \item
-  Designed and constructed experimental apparatus and data acquisition
-  hardware and software
-\item
-  Worked as a teaching assistant for undergraduate courses on ``Chemical
-  Plant Design'' and ``Numerical Methods''
-\item
-  Automated data acquisition and analysis by writing custom software
-  using Python, C/C++, and Arduino
+  Teaching assistant for undergraduate courses on ``Chemical Plant
+  Design'' and ``Numerical Methods''
 \end{itemize}
 
 \hypertarget{engineering-intern}{%
@@ -63,15 +60,13 @@ Present}
 \item
   Worked with a team of engineers to build an experimental reactor
 \item
-  Personally designed and fabricated multiple components of reactor
-  through various welding and machining processes
-\item
-  Assembled and wired multiple components on coal fire reactor
-\item
-  Designed and began fabrication of a specialized \(CO_2\) separation
-  process
+  Designed and began fabrication of a novel \(CO_2\)\hspace{0pt}
+  separation process
 \item
   Designed parts and assemblies with Autodesk Inventor CAD software
+\item
+  Personally fabricated multiple components through various welding and
+  machining processes
 \end{itemize}
 
 \hypertarget{chemical-engineering-laboratory-assistant}{%
@@ -84,20 +79,14 @@ May 2014}
 \begin{itemize}
 \tightlist
 \item
+  Aided development of biomass gasification kinetic models by collecting
+  data on more than 70 reactions
+\item
   Managed and carried out all aspects of laboratory work in an
   independent and unsupervised setting
 \item
-  Installed, repaired and maintained ceramic gasification reactor and
-  components
-\item
-  Collected data on more than 70 reactions to develop accurate kinetic
-  models
-\item
-  Improved efficiency of data collection by automating data analysis and
-  graphic generation with Microsoft VBA
-\item
-  Built, repaired and maintained various components of experimental
-  reactor apparatus
+  Improved experimental efficiency by automating data analysis with
+  Microsoft VBA
 \item
   Trained 2 new employees in safety regulations and standard operating
   procedures
@@ -168,7 +157,7 @@ Apr 2016}
 \tightlist
 \item
   Experience with C / C++, C\#, FORTRAN, Java, JavaScript / HTML / CSS,
-  MATLAB, Python, Microsoft VBA
+  MATLAB, Python, SQL, Microsoft VBA
 \item
   Implemented and published the open-source
   \href{https://github.com/flythereddflagg/lpfgopt}{Leapfrogging
@@ -186,7 +175,8 @@ Apr 2016}
 \tightlist
 \item
   Experience with Arduino, Autodesk Inventor, GCC and GNU Build Tools,
-  Git, Linux, MathCAD, MATLAB / Simulink, Microsoft Office
+  Git, Linux, MathCAD, MATLAB / Simulink, Microsoft Office, Raspberry
+  Pi, SQLite, Microsoft SQL Server
 \item
   Built custom data acquisition and analysis hardware and corresponding
   software using Arduino and other open-source platforms
@@ -205,4 +195,39 @@ Apr 2016}
   Machining processes (i.e.~end milling, turning etc.)
 \item
   Welding (SMAW, GMAW, Oxy-acetylene welding and brazing, GTAW)
+\end{itemize}
+
+\hypertarget{publications}{%
+\subsection{Publications}\label{publications}}
+
+% https://orcid.org/0000-0001-7269-2155
+
+\begin{itemize}
+\tightlist
+\item
+  Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and
+  W. Vincent Wilding, \emph{Proper Use of the DIPPR 801 Database for
+  Creation of Models, Methods, and Processes}, Journal of Chemical \&
+  Engineering Data \textbf{2021} \emph{66} (1), 3-10. DOI:
+  10.1021/acs.jced.0c00641
+\end{itemize}
+
+\hypertarget{presentations}{%
+\subsection{Presentations}\label{presentations}}
+
+\begin{itemize}
+\tightlist
+\item
+  Mark E. Redd, Glenn Seaton, Thomas A. Knotts IV, Neil F. Giles, and W.
+  Vincent Wilding. ``An Improved Method for Predicting Autoignition
+  Temperatures Based on First Principles'', Properties and Phase
+  Equilibria for Fuels and Petrochemicals: Model Development, AIChE Fall
+  Meeting, November 16, 2020, Virtual Meeting,
+  (https://youtu.be/v3WRcLRLV\_M)
+\item
+  Mark E. Redd, Thomas A. Knotts, Neil F. Giles, and W. Vincent Wilding.
+  ``A Study of Unexpected Autoignition Temperature Trends for Pure
+  \emph{n-}Alkanes'', Presentation 480e, Presentation Session 480:
+  Properties and Phase Equilibria for Fuels and Petrochemicals I, AIChE
+  Annual Meeting, November 13, 2019. Orlando, FL.
 \end{itemize}
