added link to pub

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -208,8 +208,9 @@ Apr 2016}
   Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and
   W. Vincent Wilding, \emph{Proper Use of the DIPPR 801 Database for
   Creation of Models, Methods, and Processes}, Journal of Chemical \&
-  Engineering Data \textbf{2021} \emph{66} (1), 3-10. DOI:
-  10.1021/acs.jced.0c00641
+  Engineering Data \textbf{2021} \emph{66} (1), 3-10.
+  \href{https://doi.org/10.1021/acs.jced.0c00641}{DOI:
+  10.1021/acs.jced.0c00641}
 \end{itemize}
 
 \hypertarget{presentations}{%
