Updates to resume to include AIT alkane paper

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -58,7 +58,8 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
 \begin{itemize}
 \tightlist
 \item
-  Worked with a team of engineers to build an experimental reactor
+  Worked with a team of engineers to build an experimental, multi-fuel,
+  combustion reactor
 \item
   Designed and began fabrication of a novel \(CO_2\)\hspace{0pt}
   separation process
@@ -126,8 +127,8 @@ Assistant}\label{biology-laboratory-assistant}}
   find patterns in gene expression from the removal of Saccharide-9 from
   the plant genome
 \item
-  Collected data from over 100 specimens by making synthetic growth
-  media, planting and observing growth patterns
+  Collected data from 100+ specimens by making synthetic growth media,
+  planting and observing growth patterns
 \end{itemize}
 
 \hypertarget{education}{%
@@ -156,7 +157,7 @@ Apr 2016}
 \begin{itemize}
 \tightlist
 \item
-  Experience with C / C++, C\#, FORTRAN, Java, JavaScript / HTML / CSS,
+  Experience with C/C++, C\#, FORTRAN, Java, JavaScript/HTML/CSS,
   MATLAB, Python, SQL, Microsoft VBA
 \item
   Implemented and published the open-source
@@ -164,8 +165,8 @@ Apr 2016}
   Algorithm} with library wrappers for C, C++ and Python
 \item
   Wrote an open-source introductory
-  \href{https://flythereddflagg.github.io/python_book/site/index.html}{book}
-  on Python and computer science
+  \href{https://flythereddflagg.github.io/python_book/site/index.html}{book
+  on Python and computer science}
 \end{itemize}
 
 \hypertarget{software-platforms}{%
@@ -175,8 +176,8 @@ Apr 2016}
 \tightlist
 \item
   Experience with Arduino, Autodesk Inventor, GCC and GNU Build Tools,
-  Git, Linux, MathCAD, MATLAB / Simulink, Microsoft Office, Raspberry
-  Pi, SQLite, Microsoft SQL Server
+  Git, Linux, MathCAD, MATLAB/Simulink, Microsoft Office, Raspberry Pi,
+  SQLite, Microsoft SQL Server
 \item
   Built custom data acquisition and analysis hardware and corresponding
   software using Arduino and other open-source platforms
@@ -205,6 +206,10 @@ Apr 2016}
 \begin{itemize}
 \tightlist
 \item
+  Mark E. Redd, Joseph C. Bloxham, Neil F. Giles, Thomas A. Knotts, W.
+  Vincent Wilding, \emph{A Study of Unexpected Autoignition Temperature
+  Trends for Pure} n-\emph{Alkanes}, Fuel \textbf{2021}, (Accepted)
+\item
   Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and
   W. Vincent Wilding, \emph{Proper Use of the DIPPR 801 Database for
   Creation of Models, Methods, and Processes}, Journal of Chemical \&
@@ -224,7 +229,7 @@ Apr 2016}
   Temperatures Based on First Principles'', Properties and Phase
   Equilibria for Fuels and Petrochemicals: Model Development, AIChE Fall
   Meeting, November 16, 2020, Virtual Meeting,
-  (https://youtu.be/v3WRcLRLV\_M)
+  (\url{https://youtu.be/v3WRcLRLV_M})
 \item
   Mark E. Redd, Thomas A. Knotts, Neil F. Giles, and W. Vincent Wilding.
   ``A Study of Unexpected Autoignition Temperature Trends for Pure
