made cv improvement per Jillian

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -21,11 +21,13 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
 \begin{itemize}
 \tightlist
 \item
-  Research in autoignition temperatures (AIT) of pure compounds for
+  Researched the autoignition temperatures (AIT) of pure compounds for
   AIChE's DIPPR 801 Database
 \item
   Improved the reliability of AIT values in the 801 Database through
-  evaluation of data from 600+ sources
+  evaluating data from 600+ sources
+\item
+  Filled gaps in the 801 Database by measuring AIT for 13 pure compounds
 \item
   Designed and constructed an experimental apparatus at
   \textasciitilde{} 10\% of the expected capital cost
@@ -46,7 +48,7 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
   skills
 \item
   Teaching assistant for undergraduate courses on ``Chemical Plant
-  Design'' and ``Numerical Methods''
+  Design'' (3 times) and ``Numerical Methods''
 \end{itemize}
 
 \hypertarget{engineering-intern}{%
