added fuel pub to cv

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -209,8 +209,10 @@ Apr 2016}
 \tightlist
 \item
   Mark E. Redd, Joseph C. Bloxham, Neil F. Giles, Thomas A. Knotts, W.
-  Vincent Wilding, \emph{A Study of Unexpected Autoignition Temperature
-  Trends for Pure} n-\emph{Alkanes}, Fuel \textbf{2021}, (Accepted)
+  Vincent Wilding, \emph{A study of unexpected autoignition temperature
+  trends for pure} n\emph{-alkanes}, Fuel \textbf{2021} 306, 121710.
+  \href{https://doi.org/10.1016/j.fuel.2021.121710}{DOI:
+  10.1016/j.fuel.2021.121710}.
 \item
   Joseph C. Bloxham, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, and
   W. Vincent Wilding, \emph{Proper Use of the DIPPR 801 Database for
