updated resume and removed older experience

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -95,44 +95,6 @@ May 2014}
   procedures
 \end{itemize}
 
-\hypertarget{full-time-volunteer-missionary}{%
-\subsubsection{Full-Time Volunteer
-Missionary}\label{full-time-volunteer-missionary}}
-
-\emph{The Church of Jesus Christ of Latter-day Saints, Salta, Argentina
-\textbar{} Sep 2009 -- Sep 2011}
-
-\begin{itemize}
-\tightlist
-\item
-  Trained and mentored 2 new missionaries
-\item
-  Conversed with 100+ people on the street and in homes explaining
-  concepts in Spanish
-\item
-  Participated in regular community service in 5 cities. Projects
-  included cleaning a community park, street waste disposal and hospital
-  visits
-\end{itemize}
-
-\hypertarget{biology-laboratory-assistant}{%
-\subsubsection{Biology Laboratory
-Assistant}\label{biology-laboratory-assistant}}
-
-\emph{Utah State University, Logan, UT, USA \textbar{} Apr 2009 -- Aug
-2009}
-
-\begin{itemize}
-\tightlist
-\item
-  Assisted a PhD candidate with experiments on Arabidopsis thaliana to
-  find patterns in gene expression from the removal of Saccharide-9 from
-  the plant genome
-\item
-  Collected data from 100+ specimens by making synthetic growth media,
-  planting and observing growth patterns
-\end{itemize}
-
 \hypertarget{education}{%
 \subsection{Education}\label{education}}
 
@@ -152,6 +114,25 @@ Apr 2016}
 
 \hypertarget{skills-accomplishments}{%
 \subsection{Skills \& Accomplishments}\label{skills-accomplishments}}
+
+\hypertarget{industrial}{%
+\subsubsection{Industrial}\label{industrial}}
+
+\begin{itemize}
+\tightlist
+\item
+  Engineer In Training (Passed the
+  \href{https://account.ncees.org/rn/2233456-1459800-66313c5}{FE
+  Chemical Exam} in Oct 2021)
+\item
+  Welding (SMAW, GMAW, Oxy-acetylene welding and brazing, GTAW)
+\item
+  Machining processes (i.e.~end milling, turning etc.)
+\item
+  Automotive repair and maintenance
+\item
+  Electronics soldering and wiring
+\end{itemize}
 
 \hypertarget{programming}{%
 \subsubsection{Programming}\label{programming}}
@@ -183,21 +164,6 @@ Apr 2016}
 \item
   Built custom data acquisition and analysis hardware and corresponding
   software using Arduino and other open-source platforms
-\end{itemize}
-
-\hypertarget{industrial}{%
-\subsubsection{Industrial}\label{industrial}}
-
-\begin{itemize}
-\tightlist
-\item
-  Automotive repair and maintenance
-\item
-  Electronics soldering and wiring
-\item
-  Machining processes (i.e.~end milling, turning etc.)
-\item
-  Welding (SMAW, GMAW, Oxy-acetylene welding and brazing, GTAW)
 \end{itemize}
 
 \hypertarget{publications}{%
