--- a/resume/docs/backup/CV211020_bak.md
+++ b/resume/docs/backup/CV211020_bak.md
@@ -41,6 +41,21 @@
   - Improved experimental efficiency by automating data analysis with Microsoft VBA
   - Trained 2 new employees in safety regulations and standard operating procedures
 
+### Full-Time Volunteer Missionary
+
+  *The Church of Jesus Christ of Latter-day Saints, Salta, Argentina | Sep 2009 – Sep 2011*
+
+  - Trained and mentored 2 new missionaries
+  - Conversed with 100+ people on the street and in homes explaining concepts in Spanish
+  - Participated in regular community service in 5 cities. Projects included cleaning a community park, street waste disposal and hospital visits
+
+### Biology Laboratory Assistant
+
+  *Utah State University, Logan, UT, USA | Apr 2009 – Aug 2009*
+
+  - Assisted a PhD candidate with experiments on Arabidopsis thaliana to find patterns in gene expression from the removal of Saccharide-9 from the plant genome
+  - Collected data from 100+ specimens by making synthetic growth media, planting and observing growth patterns
+
 ## Education
 
 ### Brigham Young University
