--- a/python_book/code_files/test_write.ipynb
+++ b/python_book/code_files/test_write.ipynb
@@ -2,92 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I have a jar of Fantastic brand pickles. \n",
-      "In the jar, there are 7 pickles with an average\n",
-      "weight of 2.34758475 ounces.\n",
-      "\n",
-      "I have a jar of Fantastic brand pickles. \n",
-      "In the jar, there are 7 pickles with an average\n",
-      "weight of 2.348 ounces.\n",
-      "\n",
-      "Printing the numbers without any formatting.\n",
-      "7583\n",
-      "-123\n",
-      "23.0\n",
-      "4838495.23221\n",
-      "483.234\n",
-      "1293.0\n",
-      "\n",
-      "Notice how this can be hard to read.\n",
-      "Let's try printing them and lining up the decimals.\n",
-      "   7583\n",
-      "   -123\n",
-      "     23.000\n",
-      "4838495.232\n",
-      "    483.234\n",
-      "   1293.000\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0     3.000\n",
+       "1     2.000\n",
+       "2     5.000\n",
+       "3    36.000\n",
+       "4    23.342\n",
+       "5    34.000\n",
+       "6    53.300\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# adv_format.py\n",
-    "\n",
-    "# let's make some variables\n",
-    "pickle_brand = \"Fantastic\"\n",
-    "number_of_pickles = 7\n",
-    "average_pickle_weight = 2.34758475 # oz\n",
-    "\n",
-    "# now lets print those variables in a string\n",
-    "pickle_info = \"\"\"I have a jar of {} brand pickles. \n",
-    "In the jar, there are {} pickles with an average\n",
-    "weight of {} ounces.\\n\"\"\".format(\n",
-    "    pickle_brand, \n",
-    "    number_of_pickles, \n",
-    "    average_pickle_weight\n",
-    ") \n",
-    "\n",
-    "print(pickle_info)\n",
-    "\n",
-    "# lets redefine pickle_info in a better way\n",
-    "pickle_info = f\"\"\"I have a jar of {pickle_brand} brand pickles. \n",
-    "In the jar, there are {number_of_pickles} pickles with an average\n",
-    "weight of {average_pickle_weight:.3f} ounces.\\n\"\"\"\n",
-    "\n",
-    "print(pickle_info)\n",
-    "\n",
-    "# lets take a bunch of numbers below\n",
-    "random_number_1 =    7583        # integer\n",
-    "random_number_2 =    -123        # negative integer\n",
-    "random_number_3 =      23.0      # float number\n",
-    "random_number_4 = 4838495.23221  # bigger float number\n",
-    "random_number_5 =     483.234    # medium float number\n",
-    "random_number_6 =    1293.0      # round float number\n",
-    "\n",
-    "# now let's print them\n",
-    "print(\"Printing the numbers without any formatting.\")\n",
-    "print(f\"{random_number_1}\")\n",
-    "print(f\"{random_number_2}\")\n",
-    "print(f\"{random_number_3}\")\n",
-    "print(f\"{random_number_4}\")\n",
-    "print(f\"{random_number_5}\")\n",
-    "print(f\"{random_number_6}\")\n",
-    "print(\"\")\n",
-    "\n",
-    "print(\"Notice how this can be hard to read.\")\n",
-    "print(\"Let's try printing them and lining up the decimals.\")\n",
-    "print(f\"{random_number_1:7d}\")    \n",
-    "print(f\"{random_number_2:7d}\")    \n",
-    "print(f\"{random_number_3:11.3f}\") \n",
-    "print(f\"{random_number_4:11.3f}\")\n",
-    "print(f\"{random_number_5:11.3f}\")\n",
-    "print(f\"{random_number_6:11.3f}\")\n"
+    "input_data = [3,2,5.0,36,23.342,34,53.3]\n",
+    "the_series = pd.Series(data=input_data)\n",
+    "the_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     2.000\n",
+       "0     3.000\n",
+       "2     5.000\n",
+       "4    23.342\n",
+       "5    34.000\n",
+       "3    36.000\n",
+       "6    53.300\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_series.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "n cheeses             3.000\n",
+       "spam                  2.000\n",
+       "32                    5.000\n",
+       "the number 36        36.000\n",
+       "ohh a real float!    23.342\n",
+       "22.2                 34.000\n",
+       "the last num         53.300\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "another_series = pd.Series(\n",
+    "    data=input_data, \n",
+    "    index=['n cheeses', \"spam\", 32, \"the number 36\", \"ohh a real float!\", 22.2, \"the last num\"]\n",
+    ")\n",
+    "another_series"
    ]
   },
   {
@@ -100,7 +106,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
