added more to pandas

--- a/python_book/code_files/test_write.ipynb
+++ b/python_book/code_files/test_write.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "some_data = {\n",
-    "    ## Getsome data for this dataframe\n",
-    "}"
+    "    \"name\":[\"Jared\", \"Lisa\", \"Jan\", \"Peter\", \"Ben\"],\n",
+    "    \"sex\":['M', 'F', 'F', 'M', 'M'],\n",
+    "    \"age\":[23,32,45,12,67],\n",
+    "    \"salary\":[20e3, 40e3, 65e3, 10e3, 100e3]   \n",
+    "} # notice that all of the values must be iterables of the same length"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name sex  age    salary\n",
+      "0  Jared   M   23   20000.0\n",
+      "1   Lisa   F   32   40000.0\n",
+      "2    Jan   F   45   65000.0\n",
+      "3  Peter   M   12   10000.0\n",
+      "4    Ben   M   67  100000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(some_data)\n",
+    "print(df)# if you are not using Jupyter use print instead"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name sex  age    salary\n",
+      "0  Jared   M   23   20000.0\n",
+      "3  Peter   M   12   10000.0\n",
+      "4    Ben   M   67  100000.0\n",
+      "   name sex  age    salary\n",
+      "1  Lisa   F   32   40000.0\n",
+      "2   Jan   F   45   65000.0\n",
+      "4   Ben   M   67  100000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if you are not using Jupyter use print instead of display\n",
+    "print(df[df['sex'] == 'M']) \n",
+    "print(df[df['salary'] > 30e3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35.8"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# keys are column names and values are Series objects\n",
+    "df['age'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(\"some_data.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
