--- a/python_book/code_files/test_write.ipynb
+++ b/python_book/code_files/test_write.ipynb
@@ -2,25 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "some_data = {\n",
-    "    \"name\":[\"Jared\", \"Lisa\", \"Jan\", \"Peter\", \"Ben\"],\n",
-    "    \"sex\":['M', 'F', 'F', 'M', 'M'],\n",
-    "    \"age\":[23,32,45,12,67],\n",
-    "    \"salary\":[20e3, 40e3, 65e3, 10e3, 100e3]   \n",
-    "} # notice that all of the values must be iterables of the same length"
+    "import sqlite3 as sql\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -29,77 +18,100 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    name sex  age    salary\n",
-      "0  Jared   M   23   20000.0\n",
-      "1   Lisa   F   32   40000.0\n",
-      "2    Jan   F   45   65000.0\n",
-      "3  Peter   M   12   10000.0\n",
-      "4    Ben   M   67  100000.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(some_data)\n",
-    "print(df)# if you are not using Jupyter use print instead"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    name sex  age    salary\n",
-      "0  Jared   M   23   20000.0\n",
-      "3  Peter   M   12   10000.0\n",
-      "4    Ben   M   67  100000.0\n",
-      "   name sex  age    salary\n",
-      "1  Lisa   F   32   40000.0\n",
-      "2   Jan   F   45   65000.0\n",
-      "4   Ben   M   67  100000.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# if you are not using Jupyter use print instead of display\n",
-    "print(df[df['sex'] == 'M']) \n",
-    "print(df[df['salary'] > 30e3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jared</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lisa</td>\n",
+       "      <td>F</td>\n",
+       "      <td>32</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>F</td>\n",
+       "      <td>45</td>\n",
+       "      <td>65000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Peter</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ben</td>\n",
+       "      <td>M</td>\n",
+       "      <td>67</td>\n",
+       "      <td>100000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "35.8"
+       "    name sex  age  salary\n",
+       "0  Jared   M   23   20000\n",
+       "1   Lisa   F   32   40000\n",
+       "2    Jan   F   45   65000\n",
+       "3  Peter   M   12   10000\n",
+       "4    Ben   M   67  100000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# keys are column names and values are Series objects\n",
-    "df['age'].mean()"
+    "with sql.connect(\"./e_sections/some_data.db\") as con:\n",
+    "    df = pd.read_sql(\"select * from some_data\", con)\n",
+    "\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"some_data.csv\")"
+    "plt.plot([df[i] for i in 'age', 'salary'])"
    ]
   },
   {
@@ -112,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
