added more to numpy

--- a/python_book/code_files/test_write.ipynb
+++ b/python_book/code_files/test_write.ipynb
@@ -2,82 +2,185 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import timeit\n",
     "import numpy as np"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For two matricies $A$, $B$ with row-column dimensions $d,n$ and $n,f$ respectively, each element (noted by $r,c$ for each row and column) of the matrix product $C$ of $A$ and $B$ ($C = AB$):\n",
-    "\n",
-    "$$C_{r,c} = \\sum^n_i A_{r,i} \\cdot B_{i,c}$$"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# straight python\n",
-    "a = [\n",
-    "    [2,3,4],\n",
-    "    [3,1,9],\n",
-    "    [4,1,4]\n",
-    "]\n",
-    "b = [\n",
-    "    [2],\n",
-    "    [6],\n",
-    "    [5]\n",
-    "]\n",
-    "\n",
-    "a_array, b_array = np.array(a), np.array(b)\n",
-    "\n",
-    "def matmul(a, b):\n",
-    "    d, f, n = len(a), len(b[0]), len(b)\n",
-    "\n",
-    "    c = [[0.0 for _ in range(f)] for __ in range(d)]\n",
-    "\n",
-    "    for row in range(d):\n",
-    "        for column in range(f):\n",
-    "            for i in range(n):\n",
-    "                c[row][column] += a[row][i]*b[i][column]\n",
-    "\n",
-    "    return c\n",
-    "\n",
-    "\n",
-    "def np_matmul(a, b):\n",
-    "    return a_array @ b_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(54.01758064573424, 0.12215660200035927, 0.06598604099963268)"
+       "array([[  21. ,   42. ,   32. ],\n",
+       "       [   1. , -129.2,  234. ],\n",
+       "       [   3. ,    6. ,    9. ]])"
       ]
      },
-     "execution_count": 39,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "t_matmul = timeit.timeit(lambda: matmul(a,b), number=10000)\n",
-    "t_npmatmul = timeit.timeit(lambda: np_matmul(a_array, b_array), number=10000)\n",
-    "pct_matmul = (t_matmul - t_npmatmul)/t_matmul\n",
+    "# we will start with two arrays\n",
+    "a = np.array([\n",
+    "    [21, 42, 32],\n",
+    "    [1, -129.2, 234.0],\n",
+    "    [3, 6, 9]\n",
+    "])\n",
+    "# make an array of zeros\n",
+    "b = np.zeros((3,3)) \n",
+    "display(a)\n",
+    "display(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# notice that arrays are forced\n",
+    "# to be all the same data type\n",
+    "display(a.dtype, b.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.21 ,  0.42 ,  0.32 ],\n",
+       "       [ 0.01 , -1.292,  2.34 ],\n",
+       "       [ 0.03 ,  0.06 ,  0.09 ]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  22. ,   43. ,   33. ],\n",
+       "       [   2. , -128.2,  235. ],\n",
+       "       [   4. ,    7. ,   10. ]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# we can do elementwise math\n",
+    "display(b + 1)\n",
+    "display(a / 100)\n",
+    "display((b + 1) + a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-12201.60000000001"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.21036585,  0.0152439 , -1.14430894],\n",
+       "       [-0.05679583, -0.00762195,  0.40011146],\n",
+       "       [-0.03225806,  0.        ,  0.22580645]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.0000000e+00,  0.0000000e+00, -8.8817842e-16],\n",
+       "       [ 8.8817842e-16,  1.0000000e+00,  0.0000000e+00],\n",
+       "       [ 0.0000000e+00, -6.9388939e-18,  1.0000000e+00]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.91869919,  0.33569368,  0.19354839])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# we can do linear algebra calculations like determinants\n",
+    "# inverse matrices or solvers\n",
+    "display(np.linalg.det(a))\n",
+    "display(np.linalg.inv(a))\n",
+    "display(a @ np.linalg.inv(a)) # to prove it is the inverse\n",
     "\n",
-    "(1 - pct_matmul) * 100, t_matmul, t_npmatmul"
+    "# get the first column of b+1\n",
+    "display(np.linalg.solve(a, (b + 1)[:,1])) "
    ]
   },
   {
@@ -97,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
