--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -7,7 +7,7 @@
 \textbar{} 552 N 800 W, Provo, UT, 84601 \textbar{} (435) 760-9452
 
 % \href{https://www.linkedin.com/in/mark-redd-53878880/}{LinkedIn},
-\href{https://github.com/flythereddflagg}{GitHub}
+% \href{https://github.com/flythereddflagg}{GitHub}
 
 \hypertarget{experience}{%
 \subsection{Experience}\label{experience}}
@@ -103,7 +103,7 @@ May 2014}
 University}\label{brigham-young-university}}
 
 \emph{Doctor of Philosophy, Chemical Engineering \textbar{} Jul 2016 --
-2021}
+2022}
 
 \hypertarget{brigham-young-university-1}{%
 \subsubsection{Brigham Young
