added in prep references

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -172,7 +172,15 @@ Apr 2016}
 % https://orcid.org/0000-0001-7269-2155
 
 \begin{itemize}
-\tightlist
+\item
+  Mark E. Redd, Ethan Gustafson, Elizabeth Hart, Nathan McDonald,
+  Keturah McQuade, Neil F. Giles, Thomas A. Knotts IV, W. Vincent
+  Wilding, \emph{Autoignition Temperature Data and Trends for Various
+  Chemical Families} (in preparation)
+\item
+  Mark E. Redd, Glenn Seaton, Neil F. Giles, Thomas A. Knotts IV, W.
+  Vincent Wilding, \emph{An Improved Method for Predicting Autoignition
+  Temperatures Based on First Principles} (in preparation)
 \item
   Mark E. Redd, Joseph C. Bloxham, Neil F. Giles, Thomas A. Knotts, W.
   Vincent Wilding, \emph{A study of unexpected autoignition temperature
