minor update to CV

--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -180,7 +180,7 @@ Apr 2016}
 \item
   Mark E. Redd, Glenn Seaton, Neil F. Giles, Thomas A. Knotts IV, W.
   Vincent Wilding, \emph{An Improved Method for Predicting Autoignition
-  Temperatures Based on First Principles} (in preparation)
+  Temperatures Based on First Principles} (Submitted to Fuel)
 \item
   Mark E. Redd, Joseph C. Bloxham, Neil F. Giles, Thomas A. Knotts, W.
   Vincent Wilding, \emph{A study of unexpected autoignition temperature
