--- a/resume/build_pdf/Mark_Redd_Resume_Printable.tex
+++ b/resume/build_pdf/Mark_Redd_Resume_Printable.tex
@@ -27,7 +27,7 @@ Dr.~W. V. Wilding \textbar{} Jul 2016 -- Present}
   Improved the reliability of AIT values in the 801 Database through
   evaluating data from 600+ sources
 \item
-  Filled gaps in the 801 Database by measuring AIT for 17 pure compounds
+  Filled gaps in the 801 Database by measuring AIT for 20 pure compounds
 \item
   Designed and constructed an experimental apparatus at
   \textasciitilde{} 10\% of the expected capital cost
@@ -173,14 +173,16 @@ Apr 2016}
 
 \begin{itemize}
 \item
-  Mark E. Redd, Ethan Gustafson, Elizabeth Hart, Nathan McDonald,
+  Mark E. Redd, Cassandra Guffey, Ethan Gustafson, Elizabeth Hart,
   Keturah McQuade, Neil F. Giles, Thomas A. Knotts IV, W. Vincent
-  Wilding, \emph{Autoignition Temperature Data and Trends for Various
-  Chemical Families} (in preparation)
+  Wilding, \emph{Autoignition Temperature Trends for Various Chemical
+  Families} (in preparation)
 \item
-  Mark E. Redd, Glenn Seaton, Neil F. Giles, Thomas A. Knotts IV, W.
-  Vincent Wilding, \emph{An Improved Method for Predicting Autoignition
-  Temperatures Based on First Principles} (Submitted to Fuel)
+  Mark E. Redd, W. Glenn Seaton, Neil F. Giles, Thomas A. Knotts,W.
+  Vincent Wilding, \emph{An improved method for predicting autoignition
+  temperatures based on first principles}, Fuel \textbf{2022} 323,
+  124245. \href{https://doi.org/10.1016/j.fuel.2022.124245}{DOI:
+  10.1016/j.fuel.2022.124245}
 \item
   Mark E. Redd, Joseph C. Bloxham, Neil F. Giles, Thomas A. Knotts, W.
   Vincent Wilding, \emph{A study of unexpected autoignition temperature
